<resources>
    <string name="app_name">To do list</string>
    <string name="app_title">Tarefas</string>
    <string name="add_task_title">Criar Tarefa</string>

    <string name="label_new_task">Criar Tarefa</string>
    <string name="label_cancel_task">Cancelar</string>
    <string name="label_time">Hora</string>
    <string name="label_date">Data</string>
    <string name="label_description">Descrição</string>
    <string name="label_title">Título</string>
    <string name="description_new_task">Nova tarefa</string>
    <string name="label_edit">Editar</string>
    <string name="label_delete">Deletar</string>
    <string name="label_empty_state">Ops! Você ainda não\n possui nenhuma tarefa.</string>
    <string name="description_empty_state">Não há nenhum tarefa</string>
    <string name="label_task_title">Título da tarefa</string>
    <string name="note_description">task_note</string>
    <string name="date_mock">01/01/2021 13:00</string>
    <string name="description_dots">dots</string>
</resources>