<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolBar"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/add_task_title"
            app:titleTextColor="@color/medium_purple"
            app:navigationIcon="@drawable/ic_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_start"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_end"
            android:orientation="vertical"
            app:layout_constraintGuide_end="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_title"
            app:layout_constraintTop_toBottomOf="@id/toolBar"
            android:layout_width="0dp"
            android:layout_marginTop="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintEnd_toEndOf="@id/guide_end"
            android:hint="@string/label_title"
            android:layout_height="wrap_content"
            android:theme="@style/PurleTextLabel">

        <com.google.android.material.textfield.TextInputEditText
                android:inputType="text"
                android:textColor="@color/dark_purple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_description"
            app:layout_constraintTop_toBottomOf="@id/til_title"
            android:layout_width="0dp"
            android:layout_marginTop="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintEnd_toEndOf="@id/guide_end"
            android:hint="@string/label_description"
            android:layout_height="wrap_content"
            android:theme="@style/PurleTextLabel">

        <com.google.android.material.textfield.TextInputEditText
                android:inputType="textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_date"
            app:layout_constraintTop_toBottomOf="@id/til_description"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintEnd_toStartOf="@id/til_time"
            android:layout_width="0dp"
            android:layout_marginTop="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/label_date"
            app:startIconDrawable="@drawable/ic_calendar"
            android:layout_height="wrap_content"
            android:theme="@style/PurleTextLabel">

        <com.google.android.material.textfield.TextInputEditText
                android:inputType="none"
                android:focusable="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_time"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="@id/til_date"
            android:layout_width="0dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintEnd_toEndOf="@id/guide_end"
            app:layout_constraintStart_toEndOf="@id/til_date"
            android:hint="@string/label_time"
            app:startIconDrawable="@drawable/ic_timer"
            android:layout_height="wrap_content"
            android:theme="@style/PurleTextLabel">

        <com.google.android.material.textfield.TextInputEditText
                android:inputType="none"
                android:focusable="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <FrameLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            app:layout_constraintBottom_toTopOf="@id/fl_new_task"
            app:layout_constraintEnd_toEndOf="@id/guide_end"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            android:layout_marginBottom="8dp">

        <ImageButton
                android:id="@+id/btn_cancel"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:padding="0dp"
                android:src="@drawable/ic_button_1"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="false"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="@color/dark_purple"
                android:text="@string/label_cancel_task"
                android:textAllCaps="false">
        </TextView>
    </FrameLayout>

    <FrameLayout
            android:id="@+id/fl_new_task"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guide_end"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            android:layout_marginBottom="32dp">

        <ImageButton
                android:id="@+id/btn_new_task"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:padding="0dp"
                android:src="@drawable/ic_button_2"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="false"
                android:textSize="16dp"
                android:textColor="@color/white"
                android:text="@string/label_new_task"
                android:textAllCaps="false">
        </TextView>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>